--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,17 @@
-*{
+* {
   margin: 0;
   padding: 0;
-  font-family: 'Maven Pro', sans-serif;
+  box-sizing: border-box;
 }
 html {
-  box-sizing: border-box;
-  
+  font-size: 62.5%;
+  font-family: "Maven Pro", sans-serif;
+  color: #2b2b2b;
 }
-*, *:before, *:after {
-  box-sizing: inherit;
+ul,
+ol {
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
 }
