--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,8 +5,10 @@
 }
 html {
   font-size: 62.5%;
-  font-family: "Maven Pro", sans-serif;
   color: #2b2b2b;
+}
+body{
+  font-family: "Montserrat", sans-serif;
 }
 ul,
 ol {
