--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,7 +16,7 @@ html {
   color: #2b2b2b;
 }
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", arial, sans-serif;
 }
 ul,
 ol {
